update frontend and create new app authors

--- a/base_templates/global/partials/head.html
+++ b/base_templates/global/partials/head.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Connect | Home</title>
-    <link rel="stylesheet" href="{% static 'global/css/styles.css' %}">
+    <title>Social Connect </title>
+    <link rel="stylesheet" href="{% static "global/css/styles.css" %}">
 </head>
 {% endblock content %}
