--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -1,4 +1,3 @@
-/* Estilos Gerais */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -40,7 +39,6 @@ footer {
     width: 100%;
 }
 
-/* Estilos para Postagens */
 .post, .post-detail {
     background-color: #fff;
     padding: 15px;
@@ -78,7 +76,6 @@ footer {
     background-color: #0056b3;
 }
 
-/* Estilos para Comentários */
 .comments {
     margin-top: 15px;
 }
@@ -116,7 +113,6 @@ footer {
     background-color: #218838;
 }
 
-/* Estilos para Formulários de Login e Registro */
 .register-form, .login-form {
     max-width: 400px;
     margin: 0 auto;
@@ -158,30 +154,14 @@ footer {
     margin-top: 10px;
 }
 
-/* Estilos para Perfil */
-.profile-info {
-    text-align: center;
-    margin-bottom: 20px;
+
+.form-group {
+    margin-bottom: 15px;
 }
 
-.profile-info img {
-    border-radius: 50%;
+.error-message {
+    color: red;
+    font-size: 0.875em;
+    margin-top: 5px;
 }
 
-.profile-info button {
-    margin-top: 10px;
-    padding: 5px 10px;
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.profile-info button:hover {
-    background-color: #0056b3;
-}
-
-.user-posts {
-    margin-top: 20px;
-}
