--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -1,11 +1,14 @@
 <!-- Navbar -->
 <header>
-    <div class="logo">Rede Social</div>
+    <div class="logo">Socialnet</div>
     <nav>
         <a href="{% url 'publications:home' %}">Home</a>
-        <a href=" profile">Perfil</a>
-        <a href="logout">Sair</a>
-        <a href="login">Login</a>
-        <a href="register">Registrar</a>
+        {% if user.is_authenticated %}
+            <a href="profile">Profile</a>
+            <a href="logout">Logout</a>
+        {% else %}
+            <a href="login">Login</a>
+            <a href=" {% url 'authors:register' %} ">Register</a>
+        {% endif %}
     </nav>
 </header>
