--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -11,6 +11,7 @@
             </div>
             <button type="submit">Send</button>
         </form>
+        {% include "global/partials/messages.html" %}
         <p>Don't have an account yet?? <a href="{% url "authors:register" %}">Sign in</a></p>
     </section>
 </main>
