--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -2,13 +2,15 @@
 <header>
     <div class="logo">Socialnet</div>
     <nav>
+        <ul class="navbar-options">
         <a href="{% url 'publications:home' %}">Home</a>
         {% if user.is_authenticated %}
             <a href="#">Profile</a>
-            <a href="#">Logout</a>
+            <a href="{% url "authors:logout" %}" onclick="return confirm('Are you sure?')">Logout</a>
         {% else %}
             <a href="{% url "authors:login" %}">Login</a>
             <a href=" {% url 'authors:register' %} ">Register</a>
         {% endif %}
+        </ul>
     </nav>
 </header>
