Added functionality to follow/unfollow profiles with control logic in the backend and form in the profile details template.

--- a/profiles/templates/profiles/profile_detail.html
+++ b/profiles/templates/profiles/profile_detail.html
@@ -15,11 +15,14 @@
                 </div>
                 {% if request.user.username != profile.user.username %}
                     <div class="profile-actions">
-                        {% if profile in request.user.profile.follow %}
-                            <button class="btn follow-btn">Follow</button>
-                        {% else %}
-                            <button class="btn unfollow-btn">Unfollow</button>
-                        {% endif %}
+                        <form action="{% url "profiles:follow" profile.user.username %}" method="post">
+                            {% csrf_token %}
+                            {% if not profile in request.user.profile.follow.all  %}
+                                <button class="btn follow-btn">Follow</button>
+                            {% else %}
+                                <button class="btn unfollow-btn">Unfollow</button>  
+                            {% endif %}
+                        </form>    
                     </div>
                 {% endif %}
             </div>
