--- a/publications/templates/publications/pages/publication-detail.html
+++ b/publications/templates/publications/pages/publication-detail.html
@@ -3,7 +3,7 @@
 <main>
         {% include "publications/partials/publication.html" %}
 
-        <h3>Commments</h3>
+        <h3>Comments</h3>
         <section class=" post-detail comments">
                 <div class="post-header comment">
                     <img src="https://placehold.co/30x30" alt="">
