--- a/app/publications/templates/publications/partials/publication.html
+++ b/app/publications/templates/publications/partials/publication.html
@@ -32,7 +32,7 @@
         </span>
         {% if is_detail is not True %}
             <a href="{% url 'publications:publication-detail' publication.id %}">
-            <button>Comment</button></a>
+            <button class="comment-button">Comment</button></a>
         {% endif %}
     </div>
 </div>
