--- a/app/publications/templates/publications/pages/publication-detail.html
+++ b/app/publications/templates/publications/pages/publication-detail.html
@@ -1,36 +1,35 @@
 {% extends "global/base.html" %}
 {% block content %}
 <main>
-        {% include "publications/partials/publication.html" %}
-
-        <div class="comment-form">
-            <form method="post" action="{% url "publications:comment" publication.id %}">
-                {% csrf_token %}
-                <textarea name="text" placeholder="Add a comment here..." required></textarea>
-                <button type="submit">Comment</button>
-            </form>
-        </div>
-        <h3>Comments</h3>
-        <section class="comments">
-            {% for comment in comments.all %}
-                <div class="post">
-                    <div class="post-header">
-                        <a href="{% url "profiles:profile" publication.author.username %}" class="post-profile-user-link">
-                            {% if comment.author.profile.picture %}
-                                <img src="{{ comment.author.profile.picture.url }}" alt="Profile picture">
-                            {% else %}
-                                <img src="https://placehold.co/40x40" alt="">
-                            {% endif %}
-                        </a>
-                        <a href="{% url "profiles:profile" comment.author.username %}" class="post-profile-user-link">
-                            <span>@{{ comment.author.username }}</span>
-                        </a>
-                        <small>{{ comment.created_at|timesince }} atrás</small>
-                    </div>
-                    <div><p>{{ comment.text }}</p></div>
+    {% include "publications/partials/publication.html" %}
+    <div class="comment-form">
+        <form method="post" action="{% url "publications:comment" publication.id %}">
+            {% csrf_token %}
+            <textarea name="text" placeholder="Add a comment here..." required></textarea>
+            <button type="submit">Comment</button>
+        </form>
+    </div>
+    <h3>Comments</h3>
+    <section class="comments">
+        {% for comment in comments.all %}
+            <div class="comment">
+                <div class="post-header">
+                    <a href="{% url "profiles:profile" publication.author.username %}" class="post-profile-user-link">
+                        {% if comment.author.profile.picture %}
+                            <img src="{{ comment.author.profile.picture.url }}" alt="Profile picture">
+                        {% else %}
+                            <img src="https://placehold.co/40x40" alt="">
+                        {% endif %}
+                    </a>
+                    <a href="{% url "profiles:profile" comment.author.username %}" class="post-profile-user-link">
+                        <span>@{{ comment.author.username }}</span>
+                    </a>
+                    <small>{{ comment.created_at|timesince }} atrás</small>
                 </div>
-            {% endfor %}  
-        </section>
+                <div><p>{{ comment.text }}</p></div>
+        </div>
+        {% endfor %}  
+    </section>
         
 </main>
 {% endblock content %}
