--- a/app/authors/templates/authors/pages/register.html
+++ b/app/authors/templates/authors/pages/register.html
@@ -18,7 +18,7 @@
                 
                 <button type="submit">Send</button>
             </form>
-            <p>Do you have an account?? <a href="#">Log in</a></p>
+            <p>Do you have an account?? <a href="authors:login">Log in</a></p>
         </section>
     </main>
 {% endblock content %}
