--- a/app/publications/templates/publications/pages/publication-detail.html
+++ b/app/publications/templates/publications/pages/publication-detail.html
@@ -1,7 +1,7 @@
 {% extends "global/base.html" %}
 {% block content %}
 <main>
-    {% include "publications/partials/publication.html" %}
+    {% include "global/partials/publication.html" %}
     <div class="comment-form">
         <form method="post" action="{% url "publications:comment" publication.id %}">
             {% csrf_token %}
@@ -9,7 +9,12 @@
             <button type="submit">Comment</button>
         </form>
     </div>
-    <h3>Comments</h3>
+    {% if comments %}
+        <h2>Comments</h2>
+    {% else %}
+        <h2>No comments yet</h2>
+    {% endif %}
+    
     <section class="comments">
         {% for comment in comments.all %}
             <div class="comment">
