--- a/app/base_static/global/css/styles.css
+++ b/app/base_static/global/css/styles.css
@@ -12,44 +12,90 @@ h2 {
     color: #3a3b3b;
 }
 
+
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
 header .logo {
     font-size: 24px;
     font-weight: bold;
 }
+.header-nav {
+    display: none; 
+}
 
-.navbar-options {
+.header-nav ul {
+    list-style: none;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 15px; 
-    list-style: none; 
+    gap: 10px;
     margin: 0;
     padding: 0;
+    flex-wrap: wrap;
 }
 
-.navbar-options li {
-    display: inline-block;
-}
-
-.navbar-options a {
+.header-nav ul li a {
     text-decoration: none;
-    color: #fff; 
-    padding: 5px 10px;
-    border-radius: 3px;
+    color: #fff;
+    padding: 10px 10px;
+    border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
-.navbar-options a:hover {
-    background-color: #555; 
+.header-nav ul li a:hover {
+    background-color: #555;
+}
+
+.navrail {
+    position: fixed;
+    top: 49px;
+    left: 0;
+    width: 25%;
+    max-width: 300px;
+    height: calc(100% - 49px);
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    border-top: #fff 1px;
+}
+
+.navrail ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.navrail ul li {
+    margin: 10px 20px 0 0;
+}
+
+.navrail ul li a {
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 15px;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.navrail ul li a:hover {
+    background-color: #555;
+}
+
+.main-content {
+    margin-left: 220px; 
+    padding: 80px 20px;
 }
 
 .search-container {
@@ -90,12 +136,12 @@ header .logo {
     justify-content: center;
 }
 
-main {
-    padding: 5px;
-}
-
 .search-button:hover {
     background-color: #0056b3;
+}
+
+main {
+    padding: 5px;
 }
 
 .posts h2{
@@ -211,21 +257,28 @@ main {
     background-color: #0056b3;
 }
 
-.register-form, .login-form {
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.form-card {
+    background: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 100%;
+    margin: auto;
 }
 
-.register-form h2, .login-form h2 {
-    margin-bottom: 20px;
+.form-card h2 {
     text-align: center;
 }
 
-.register-form input, .login-form input {
+.form-card label {
+    display: block;
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 8px;
+}
+
+.form-card input {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -233,27 +286,45 @@ main {
     border: 1px solid #ccc;
 }
 
-.register-form button, .login-form button {
+.form-card textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    resize: none;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+}
+
+.form-card input[type="file"] {
+    display: block;
     width: 100%;
     padding: 10px;
-    border: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+
+.form-card button {
+    display: block;
+    width: 100%;
+    margin-top: 35px;
     background-color: #007bff;
     color: #fff;
-    border-radius: 3px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-}
-
-.register-form button:hover, .login-form button:hover {
-    background-color: #0056b3;
-}
-
-.register-form p, .login-form p {
     text-align: center;
-    margin-top: 10px;
+    transition: background-color 0.3s ease;
 }
 
-.form-group {
-    margin-bottom: 15px;
+.form-card button:hover {
+    background-color: #0056b3;
 }
 
 .messages {
@@ -404,64 +475,17 @@ main {
     background-color: #218838;
 }
 
-.create-publication-card {
-    background: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    width: 100%;
-    margin: auto;
-}
+@media (max-width: 1660px) {
+    .header-nav {
+        display: flex;
+    }
 
-.create-publication-card h2 {
-    text-align: center;
-}
+    .navrail {
+        display: none;
+    }
 
-.create-publication-card label {
-    display: block;
-    font-size: 16px;
-    color: #555;
-    margin-bottom: 8px;
-}
-
-.create-publication-card textarea {
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
-    resize: none;
-    box-sizing: border-box;
-    margin-bottom: 15px;
-}
-
-.create-publication-card input[type="file"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
-    box-sizing: border-box;
-}
-
-.create-publication-card .btn.create-btn {
-    display: block;
-    width: 100%;
-    margin-top: 35px;
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    text-align: center;
-    transition: background-color 0.3s ease;
-}
-
-.create-publication-card .btn.create-btn:hover {
-    background-color: #0056b3;
+    .main-content {
+        margin-left: 0;
+        padding: 80px 20px;
+    }
 }
