--- a/app/authors/templates/authors/pages/edit.html
+++ b/app/authors/templates/authors/pages/edit.html
@@ -1,17 +1,19 @@
 {% extends "global/base.html" %}
 
 {% block content %}
+{% include "global/partials/messages.html" %}
 <section class="form-card">
     <h2>User edit</h2>
-    <form action="#" method="post">
-    {{ form.picture.as_field_group }}
-    {{ form.username.as_field_group }}
-    {{ form.first_name.as_field_group }}
-    {{ form.last_name.as_field_group }}
-    {{ form.bio.as_field_group }}
-    {{ form.date_of_birth.as_field_group }}
-    {{ form.gender.as_field_group }}
-    <button type="submit">Send</button>
+    <form action="{% url 'authors:edit_author' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.picture.as_field_group }}
+        {{ form.username.as_field_group }}
+        {{ form.first_name.as_field_group }}
+        {{ form.last_name.as_field_group }}
+        {{ form.bio.as_field_group }}
+        {{ form.date_of_birth.as_field_group }}
+        {{ form.gender.as_field_group }}
+        <button type="submit">Send</button>
     </form>
 </section>
 {% endblock content %}
