--- a/app/profiles/templates/profiles/profile_detail.html
+++ b/app/profiles/templates/profiles/profile_detail.html
@@ -43,9 +43,10 @@
             </div>
         {% endif %}
         <section class="posts">
-            {% for publication in publications %}
+            {% for publication in page_obj %}
                 {% include "global/partials/publication.html" %}
             {% endfor %}
         </section>
+        {% include "global/partials/pagination.html" %}
     </main>
 {% endblock content %}
